--- a/AHI_Capstone_25'.ipynb
+++ b/AHI_Capstone_25'.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOSpvpYg4VS3Fg1yBj6+rGX",
+      "authorship_tag": "ABX9TyMkVkx98QUU59nlWalKF6EQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1786,13 +1786,96 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "T-Test"
+      ],
       "metadata": {
-        "id": "PQrokH50meGi"
+        "id": "xbVf62KtJZur"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from scipy.stats import ttest_ind\n",
+        "\n",
+        "binary_vars = ['Stratification1', 'StratificationCategory2']\n",
+        "\n",
+        "for var in binary_vars:\n",
+        "    group0 = heartdisease_cleaned[heartdisease_cleaned['readmitted_binary'] == 0][var]\n",
+        "    group1 = heartdisease_cleaned[heartdisease_cleaned['readmitted_binary'] == 1][var]\n",
+        "    stat, p = ttest_ind(group0, group1)\n",
+        "    print(f\"T-test for {var}: t-statistic = {stat:.4f}, p-value = {p:.4f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 216
+        },
+        "id": "PQrokH50meGi",
+        "outputId": "a8bab341-8030-47dc-9488-6396ad4bee73"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'heartdisease_cleaned' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-3401778546.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mvar\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mbinary_vars\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0mgroup0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mheartdisease_cleaned\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mheartdisease_cleaned\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'readmitted_binary'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mvar\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0mgroup1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mheartdisease_cleaned\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mheartdisease_cleaned\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'readmitted_binary'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mvar\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mstat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mttest_ind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgroup0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgroup1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'heartdisease_cleaned' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "ANOVA"
+      ],
+      "metadata": {
+        "id": "Ee4oFTFgJihn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from scipy.stats import f_oneway\n",
+        "\n",
+        "numeric_vars = ['Stratification3', 'Stratification1'\n",
+        "\n",
+        "]\n",
+        "\n",
+        "for var in numeric_vars:\n",
+        "    group0 = heartdisease_cleaned[heartdisease_cleaned['readmitted_binary'] == 0][var]\n",
+        "    group1 = heartdisease_cleaned[heartdisease_cleaned['readmitted_binary'] == 1][var]\n",
+        "    stat, p = f_oneway(group0, group1)\n",
+        "    print(f\"ANOVA for {var}: F-statistic = {stat:.4f}, p-value = {p:.4f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 216
+        },
+        "id": "p6aAMl2iJc8l",
+        "outputId": "876c4f02-86a8-4869-9ca8-02f0f04cf389"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'heartdisease_cleaned' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-1960554246.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mvar\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnumeric_vars\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0mgroup0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mheartdisease_cleaned\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mheartdisease_cleaned\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'readmitted_binary'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mvar\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m     \u001b[0mgroup1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mheartdisease_cleaned\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mheartdisease_cleaned\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'readmitted_binary'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mvar\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mstat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf_oneway\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgroup0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgroup1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'heartdisease_cleaned' is not defined"
+          ]
+        }
+      ]
     }
   ]
 }
